# SAT-3

./: CMakeLists.txt  README.md  main.cxx
src/: CMakeLists.txt
src/bruteForce/: CMakeLists.txt  bfSAT.cpp
tests/unit/: CMakeLists.txt
tests/unit/bf/: CMakeLists.txt  bf.cpp
